fixed topbar initials not showing bug

--- a/sakai-ng/src/assets/layout/_topbar.scss
+++ b/sakai-ng/src/assets/layout/_topbar.scss
@@ -61,7 +61,7 @@
             font-size: 1.25rem;
         }
 
-        span {
+        > span {
             font-size: 1rem;
             display: none;
         }
